<resources>
    <string name="app_name">Probability Distribution Toolkit</string>
    <string name="fValueMainButton">Compute F-Values</string>
    <string name="zScoreMainButton">Compute Z-Scores</string>
    <string name="tScoreMainButton">Compute t-Scores</string>
    <string name="x2ValueMainButton">Compute X2-Scores</string>
    <string name="pValueZMainButton">Compute p-Values\n(Normal Distribution)</string>
    <string name="pValueTMainButton">Compute p-Values\n(t-Distribution)</string>
    <string name="pValueX2MainButton">Compute p-Values\n(chi-squared distribution)</string>
    <string name="pValueFMainButton">Compute p-Values\n(F-distribution)</string>
    <string name="dfError">Please input a non-negative integer for the degrees of freedom.</string>
    <string name="testTypeError">Invalid test type.</string>
    <string name="pValueError">Please input a number between 0 and 1.</string>
    <string name="dfRangeError">x2 &gt; 100 is not supported for df = 1.</string>
    <string name="df2Error">df &lt; 2 not supported.</string>
    <string name="value">%1$.10f</string>
    <string name="range">%1$.10f\nto\n%2$.10f</string>
    <string name="numberFormatError">Please input a number for the %s.</string>
    <string name="fValueHeader">Compute F-Value</string>
    <string name="zScoreHeader">Compute Z-Score</string>
    <string name="tScoreHeader">Compute t-Score</string>
    <string name="x2ValueHeader">Compute X2-Score</string>
    <string name="pValueHeader">Compute p-Value</string>
    <string name="fValueButton">Compute\nF-Value</string>
    <string name="zScoreButton">Compute\nZ-Score</string>
    <string name="tScoreButton">Compute\nt-Score</string>
    <string name="x2ValueButton">Compute\nX2-Score</string>
    <string name="pValueButton">Compute\np-Value</string>
    <string name="fValueDist">(F-Distribution)</string>
    <string name="zScoreDist">(Normal Distribution)</string>
    <string name="tScoreDist">(t-Distribution)</string>
    <string name="x2ValueDist">(Chi-Squared Distribution)</string>
    <string name="testLeft">Left-Tailed Test</string>
    <string name="testRight">Right-Tailed Test</string>
    <string name="testTwo">Two-Tailed Test</string>
    <string name="pValueLabel">P-Value Here</string>
    <string name="zScoreLabel">Z-Score Here</string>
    <string name="tScoreLabel">t-Score Here</string>
    <string name="x2ValueLabel">X2-Value Here</string>
    <string name="fValueLabel">F-Value Here</string>
    <string name="pValue">P-Value</string>
    <string name="zScore">Z-Score</string>
    <string name="tScore">t-Score</string>
    <string name="x2Value">X2-Value</string>
    <string name="fValue">F-Value</string>
    <string name="df">Degrees of Freedom</string>
    <string name="dfN">df Numerator</string>
    <string name="dfD">df Denominator</string>
</resources>
