<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.edu.dlsu.advstat.zscore.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_margin="10dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pValueButton"
                android:text="@string/pValueZMainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zScoreButton"
                android:text="@string/zScoreMainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pValueTButton"
                android:text="@string/pValueTMainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tScoreButton"
                android:text="@string/tScoreMainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pValueX2Button"
                android:text="@string/pValueX2MainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/x2Button"
                android:text="@string/x2ValueMainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pValueFButton"
                android:text="@string/pValueFMainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fButton"
                android:text="@string/fValueMainButton"
                android:layout_margin="5dp"
                android:padding="5dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
