<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.edu.dlsu.advstat.zscore.ComputePForX2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pValueHeader"
        android:id="@+id/headerLabel"
        android:textAlignment="center"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/x2ValueDist"
        android:id="@+id/distLabel"
        android:textSize="25sp"
        android:layout_below="@id/headerLabel"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/x2Field"
        android:layout_below="@id/distLabel"
        android:hint="@string/x2Value"
        android:inputType="numberDecimal"/>
    <android.support.percent.PercentRelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/x2Field"
        android:id="@+id/inputPanel">
        <EditText
            app:layout_widthPercent="60%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dfField"
            android:layout_below="@id/tField"
            android:hint="@string/df"
            android:inputType="number"/>
        <Button
            app:layout_widthPercent="40%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dfField"
            android:layout_toRightOf="@id/dfField"
            android:id="@+id/computeButton"
            android:text="@string/pValueButton"
            android:layout_below="@id/tField"/>
    </android.support.percent.PercentRelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pLabel"
        android:textSize="20sp"
        android:layout_below="@id/inputPanel"
        android:layout_margin="10dp"
        android:text="@string/pValueLabel"
        android:textAlignment="viewEnd"/>
</RelativeLayout>
