<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.edu.dlsu.advstat.zscore.ComputeF">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fValueHeader"
        android:id="@+id/headerLabel"
        android:textAlignment="center"
        android:textSize="28sp"/>
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputPanel1"
        android:layout_below="@id/headerLabel">
        <EditText
            app:layout_widthPercent="50%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pField"
            android:hint="@string/pValue"
            android:inputType="numberDecimal"/>
        <EditText
            app:layout_widthPercent="50%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/df1Field"
            android:layout_toRightOf="@id/pField"
            android:hint="@string/dfN"
            android:inputType="numberDecimal"/>
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPanel1"
        android:id="@+id/inputPanel">
        <EditText
            app:layout_widthPercent="60%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/df2Field"
            android:layout_below="@id/pField"
            android:hint="@string/dfD"
            android:inputType="number"/>
        <Button
            app:layout_widthPercent="40%"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/df2Field"
            android:layout_toRightOf="@id/df2Field"
            android:id="@+id/computeButton"
            android:text="@string/pValueButton"
            android:layout_below="@id/pField"/>
    </android.support.percent.PercentRelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fLabel"
        android:textSize="20sp"
        android:layout_below="@id/inputPanel"
        android:layout_margin="10dp"
        android:text="@string/fValueLabel"
        android:textAlignment="viewEnd"/>
</RelativeLayout>
